feat(projects): add role-based collaboration
Enforce owner, manager, and member capabilities across projects, tasks, and AI planning. Protect membership and assignment invariants in PostgreSQL and make workspace mutations race-safe.